[project]
name = "prompt-firewall"
version = "0.1.6"
description = "Prompt guard library for composing multiple safety checks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.14.13",
    "llama-index-embeddings-ollama>=0.8.6",
    "llama-index-llms-ollama>=0.9.1",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
prompt_guard = ["data/*.txt"]
